Rover update + other fix

--- a/src/pages/quizz/quizz.ejs
+++ b/src/pages/quizz/quizz.ejs
@@ -27,7 +27,7 @@
     </div>
   </app-pc-window>
 
-  <app-pc-window hidden id="w-rover" ifRight="w-intro"  rover="We're not even started and you're already lost ? What a looser...">
+  <app-pc-window hidden id="w-rover" ifRight="w-intro"  rover="We've not even started and you're already lost? What a looser...">
     <p slot="title">More</p>
     <p>I don't want to influence your thoughts, if you need help, call rover with the little [?] at the top of the toolbar.</p>
     <div class="window-buttons">
@@ -35,10 +35,10 @@
     </div>
   </app-pc-window>
 
-  <app-pc-window hidden id="w-q1" ifRight="w-q2" ifWrong="w-e1" rover="What the hell is the Fratrum Capulus ? I sure don't know">
+  <app-pc-window hidden id="w-q1" ifRight="w-q2" ifWrong="w-e1" rover="What the hell is the Fratrum Capulus? I'm sure that u don't give a damn shit!">
     <img slot="icon" src="<%= htmlWebpackPlugin.options.assetsUrl %>images/icons/pokeball.png">
     <p slot="title">Now go catch them all</p>
-    <p>Did you find out who created the conspiracy of the Fractum Capulus ?</p>
+    <p>Can you guess who is the guru of the Fractum Capulus ?</p>
     <div class="window-buttons">
       <button rightAwnser class="img-btn" id="b-abu"></button>
       <button wrongAwnser class="img-btn" id="b-jawad"></button>
@@ -54,7 +54,7 @@
     </div>
   </app-pc-window>
 
-  <app-pc-window hidden id="w-q2" ifRight="w-q3" ifWrong="w-e1" >
+  <app-pc-window hidden id="w-q2" ifRight="w-q3" ifWrong="w-e1" rover="Please concentrate b**ch! I don't think that the little clown with two big ears is concerned.">
     <p slot="title">Good job !</p>
     <p>And what chemical element is responsible of mind-possession ?</p>
     <div class="window-buttons">
@@ -65,7 +65,7 @@
     </div>
   </app-pc-window>
 
-  <app-pc-window hidden id="w-q3" ifRight="w-ending">
+  <app-pc-window hidden id="w-q3" ifRight="w-ending" rover="What the freak Dude! I think that god gave you craps instead of eyes.">
     <p slot="title">The final frontier</p>
     <p>Knowing what you know, find out who has been infected</p>
     <div class="window-buttons">
@@ -123,7 +123,7 @@
   </div>
   <div class="desktop-icon" id="netscape">
     <img src="<%= htmlWebpackPlugin.options.assetsUrl %>images/icons/netscape-logo.png" alt="">
-    <span>Netscapefinalv2.prod.Final.c</span>
+    <span>Netscape Browser.c</span>
   </div>
   <div class="desktop-icon" id="wallpaper">
     <img src="<%= htmlWebpackPlugin.options.assetsUrl %>images/icons/wallpaper.jpg" alt="">
