--- a/src/pages/quizz/quizz.scss
+++ b/src/pages/quizz/quizz.scss
@@ -51,7 +51,7 @@
           background: linear-gradient(to bottom, #b828c7 0%, #5979ef 17%, #f086f3 32%, #869ef3 45%, #5979ef 59%, #00fffe 100%);
           display: inline-block;
           margin-right: 2px;
-          animation: loader 2s infinite;
+          animation: loader 0.5s infinite;
           animation-timing-function: linear;
         }
       }
@@ -244,8 +244,8 @@
   #virtual-girl {
     display: none;
     position: absolute;
-    bottom: 40px;
-    right: 0;
+    bottom: 23px;
+    right: 50%;
 
     img {
       width: 200px;
