--- a/src/shared/custom-elements/pc-window/rover-xp-dog/rover-xp-dog.scss
+++ b/src/shared/custom-elements/pc-window/rover-xp-dog/rover-xp-dog.scss
@@ -10,10 +10,10 @@
 
   #rover-img {
     justify-self: center;
-    border-radius: 250px;
     height: 150px;
     width: 150px;
     overflow: hidden;
+    margin-top: 50px;
   }
 
   #rover-bubble {
