--- a/src/pages/enroll/enroll.ejs
+++ b/src/pages/enroll/enroll.ejs
@@ -10,7 +10,12 @@
 </app-overlay>
 
 <div id="agent-card-container">
-  <img id="join-btn" src="<%= htmlWebpackPlugin.options.assetsUrl %>images/anti-coffee.png">
+  <div id="join-btn">
+    <p>JOIN US</p>
+    <img src="<%= htmlWebpackPlugin.options.assetsUrl %>images/vapor-sculpture-coffee.gif">
+    <p>NOW</p>
+  </div>
+
 </div>
 
 <app-pc-window hidden id="window-firstname" randomPlace>
