fix script fullscreen

--- a/src/pages/index/index.ejs
+++ b/src/pages/index/index.ejs
@@ -12,6 +12,7 @@
       <app-overlay id="goto-fullscreen-overlay" hidden>
             <p>You found the Snoopa-Vision !</p>
             <p>Use it to see the world as it is</p>
+            <!-- TODO detect mac or PC to change the keypress -->
             <p id="snoopa-vision-f11">Press <strong>F11</strong> to wear it</p>
       </app-overlay>
 <%= require('../../core/parts/footer.ejs')() %>
