--- a/src/pages/index/index.ejs
+++ b/src/pages/index/index.ejs
@@ -13,6 +13,6 @@
             <p>You found the Snoopa-Vision !</p>
             <p>Use it to see the world as it is</p>
             <!-- TODO detect mac or PC to change the keypress -->
-            <p id="snoopa-vision-f11">Press <strong>F11</strong> to wear it</p>
+            <p id="snoopa-vision-f11">Press <strong id="fullscreen-shortcut">F11</strong> to wear it</p>
       </app-overlay>
 <%= require('../../core/parts/footer.ejs')() %>
