sounds - hacked message - enroll autocompletion fix

--- a/src/pages/enroll/enroll.ejs
+++ b/src/pages/enroll/enroll.ejs
@@ -5,6 +5,7 @@
     <p>We don't have much time before they find us</p>
     <p>Fill the form to join the society</p>
     <p>We'll talk afterwards.</p>
+    <p>Please [CLICK] to proceed</p>
   </div>
   <span id="intro-overlay-text-animation"></span>
 </app-overlay>
