--- a/src/pages/quizz/quizz.ejs
+++ b/src/pages/quizz/quizz.ejs
@@ -105,14 +105,14 @@
   <app-pc-window id="mona-lisa" randomPlace>
     <img slot="icon" src="<%= htmlWebpackPlugin.options.assetsUrl %>images/icons/monalisa.jpeg">
     <p slot="title">This is art</p>
-    <img src="<%= htmlWebpackPlugin.options.assetsUrl %>images/barbara.png" alt="">
-    <img src="<%= htmlWebpackPlugin.options.assetsUrl %>images/thomas.jpg" alt="">
-    <img src="<%= htmlWebpackPlugin.options.assetsUrl %>images/margaux.png" alt="">
+    <img class="art-picture" src="<%= htmlWebpackPlugin.options.assetsUrl %>images/thomas.jpg" alt="">
+    <img class="art-picture" src="<%= htmlWebpackPlugin.options.assetsUrl %>images/barbara.png" alt="">
+    <img class="art-picture" src="<%= htmlWebpackPlugin.options.assetsUrl %>images/margaux.png" alt="">
   </app-pc-window>
   <app-pc-window id="netscape-browser" randomPlace>
     <img slot="icon" src="<%= htmlWebpackPlugin.options.assetsUrl %>images/icons/netscape-logo.png">
     <p slot="title">Netscape Internet Browser</p>
-    <iframe id="youtube-crack" src="http://www.newsoffuture.com/"width="700" height="400"></iframe>
+    <iframe id="" src="http://www.newsoffuture.com/"width="700" height="400"></iframe>
   </app-pc-window>
 </div>
 
