--- a/src/pages/quizz/quizz.scss
+++ b/src/pages/quizz/quizz.scss
@@ -92,8 +92,8 @@
     display: none;
 
     #youtube-crack {
-      width: 742px;
-      height: 408px;
+      width: 400px;
+      height: 215px;
     }
   }
 
@@ -128,8 +128,9 @@
   #mona-lisa {
     display: none;
 
-    img {
-      width: 100%;
+    .art-picture {
+      width: 370px;
+      margin-bottom: 10px;
     }
   }
 
@@ -152,7 +153,7 @@
       border-right-color: #a8a9a8;
       border-top-color: #eaeaea;
       border-left-color: #eaeaea;
-      background-size: contain !important;
+      background-size: cover !important;
       background-repeat: no-repeat !important;
       background-position: center !important;
       margin: 5px;
@@ -277,7 +278,6 @@
 
     span {
       color: white;
-      word-wrap: break-word;
       font-size: 14px;
       width: 100%;
       text-align: center;
