--- a/src/core/parts/header.ejs
+++ b/src/core/parts/header.ejs
@@ -5,6 +5,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="/assets/images/icons/coffee.png"/>
+
+    <script>
+      const bSupportsCustomElements = (
+        'customElements' in window
+      );
+      
+      if (!bSupportsCustomElements) {
+        console.log("polyfills loaded");
+        let scriptElement = document.createElement('script');
+        scriptElement.async = false;
+        scriptElement.src = '/polyfills.bundle.js';
+        document.head.appendChild(scriptElement);
+      }
+    </script>
   </head>
 
   <body>
