Update text mistakes, flash position and netscape iframe

--- a/src/pages/index/index.ejs
+++ b/src/pages/index/index.ejs
@@ -4,15 +4,15 @@
                   <p>Many things are <strong>hidden</strong> from us...</p>
                   <p>I <em>might</em> tell you what they are</p>
                   <p>But the journey is yours to take</p>
-                  <p><strong>[CLICK]</strong> if you consent to the risks.</p>
+                  <p><strong>[CLICK]</strong> if you consent to take the risks.</p>
             </div>
             <span id="intro-overlay-text-animation"></span>
       </app-overlay>
 
       <app-overlay id="goto-fullscreen-overlay" hidden>
             <p>You found the Snoopa-Vision !</p>
-            <p>Use it to see the world as it is</p>
+            <p>Use it to see the world through it</p>
             <!-- TODO detect mac or PC to change the keypress -->
-            <p id="snoopa-vision-f11">Press <strong id="fullscreen-shortcut">F11</strong> to wear it</p>
+            <p id="snoopa-vision-f11">Press <strong id="fullscreen-shortcut">F11</strong> to wear Snoopa-Vision</p>
       </app-overlay>
 <%= require('../../core/parts/footer.ejs')() %>
