--- a/src/pages/quizz/quizz.ejs
+++ b/src/pages/quizz/quizz.ejs
@@ -119,7 +119,7 @@
   <app-pc-window hidden id="netscape-browser" randomPlace closable>
     <img slot="icon" src="<%= htmlWebpackPlugin.options.assetsUrl %>images/icons/netscape-logo.png">
     <p slot="title">Netscape Internet Browser</p>
-    <iframe id="" src="http://www.newsoffuture.com/"width="700" height="400"></iframe>
+    <iframe id="" src="http://www.ijustwantyourmoney.com/" width="700" height="400"></iframe>
   </app-pc-window>
 </div>
 
